# thesis-translate

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  config.py  glossary.json.example  main.py  package-lock.json  plan.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.governance/: coding-style.md  env.yaml  memory.md  patterns.md
.spec/feature/balanced-chunks/: spec.md
.spec/feature/cli-status/: spec.md
.spec/feature/concurrent-translation/: acceptance.md  api.md  design.md  spec.md
.spec/feature/parallel-chunks/: spec.md
.spec/feature/rich-ux/: spec.yaml
.spec/feature/text-preprocessing/: spec.md
.spec/feature/token-counter/: spec.md
.spec/feature/translation/: spec.md
.spec/feature/translation-config/: spec.md
.spec/feature/user-prompted-translation/: acceptance.md  api.md  design.md  spec.md
.spec/refactor-constants/: spec.yaml
.spec/refactor-coverage/: spec.yaml
.spec/refactor-dedup/: spec.yaml
.spec/refactor-exceptions/: spec.yaml
.spec/refactor-validation/: spec.yaml
.spec/refactor/dry-chunking/: spec.md
.spec/refactor/remove-unreachable/: spec.md
.spec/refactoring/: refactoring-plan.md
.tasks/: backlog.yaml  current.yaml  done.yaml  task-20251028-01.md  task-20251028-02.md  task-20251028-03.md  task-20251101-01.md  task-20251117-01.md
core/: batch_translator.py  file_translator.py  normal_translator.py  openai_translator.py  translation_config.py
src/: config.py  main.py
src/core/: batch_translator.py  concurrent_orchestrator.py  file_watcher.py  normal_translator.py  streaming_translator.py  translation_config.py  translation_worker.py
src/utils/: output_formatter.py  rich_logging.py  rich_prompts.py  text_preprocessor.py  token_counter.py
tests/: conftest.py  test_concurrent_orchestrator.py  test_config.py  test_file_watcher.py  test_glossary.json  test_main.py  test_normal_translator.py  test_parallel_chunks.py  test_rich_logging.py  test_rich_prompts.py  test_text_preprocessor.py  test_text_preprocessor_integration.py  test_token_counter.py  test_translation_config.py  test_translation_worker.py  test_user_prompted_translation.py
utils/: format_output.py  text_preprocessor.py
