[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analysis_thesis"
version = "0.1.0"
requires-python = ">=3.12"
description = "A Python project for analyzing thesis data using OpenAI's API."
dependencies = [
    "openai==2.15.0",
    "python-dotenv",
    "clipboard",
    "tiktoken",
    "rich",
    "pre-commit==4.5.1",
    "ruff==0.14.11",
]

[project.scripts]
thesis-translate = "src.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "EM", "ICN", "G", "INP", "PIE", "T20", "PYI", "RET", "RSE", "RUF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PGH", "PL", "TRY", "FLY", "PERF", "FURB", "LOG", "SLOT"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = false

[[tool.mypy.overrides]]
module = "clipboard"
ignore_missing_imports = true
